Bug 1193495 - Part 2: Maintain clones of supported codecs for each level, and do necessary checking to prevent payload-type clashes. r=mt

--HG--
extra : transplant_source : 5%1Bz%17%E5%3B%C0Y%CA%BC%C3%0D%DE%93%E8%D4%EC%BA3r